css/styles.css
body{
    font-family: Arial, Helvetica, sans-serif;
}
header {
    padding: 1.5em;
    background-color: white;
    width: 100vw;
    display: flex;
    justify-content: center;
    box-shadow: 1px 1px 2px #444444
}
.logo img{
    opacity: 0%;
    animation: fade-in 2s ease-in-out 1 forwards;
    transition: transform 0.5s ease-out;
    width: 10em;
    height: auto;
}
.logo img:hover {
    transform: scale(1.05);
}

@keyframes fade-in {100%{opacity: 100%};}

main {
    width: 100%;
    height: 100%;
    overflow: hidden;
}
.fade {
    opacity: 0%;
    animation: fade-in 2s ease-in-out 1 forwards;
}

.background {
    background-image: url(../assets/cover_Rocscience_magazine_mobile.png);
    background-size: cover;
    background-repeat: no-repeat;
    content: '';
    height: 100%;
    width: 100%;
    animation: resize 3s ease-in-out 1 forwards;
    position: absolute;
    z-index: -3;
}

@keyframes resize {100%{transform: scale(1.15);}}

.center {
    padding: 1em;
    margin: 2em 2em 1em 2em;
    border-radius: 1em;
    /* background-color: #ffffffcb; */
}

.title {
    color: #ffffff;
    padding: 0.5em;
    font-weight: 700;
    text-shadow: 1px 1px 2px #444444;
}
.subtitle {
    font-weight: 100;
    color: #ffffff;
    padding: 0.5em;
    text-shadow: 1px 1px 2px #444444;
}

/* BUTTONS */
.button {
    margin-bottom: 1.5em;
}
button {
    border: none;
    border-radius: 0.5em;
    padding: 1em;
    background-color:#ffffffcb;
    width: 100%;
    margin-top: 100px;
    text-decoration: none;
    font-weight: 500;
    box-shadow: 1px 1px 2px #444444;
    animation: scroll-up 2s ease-out 1 forwards;
    transition: transform 0.5s ease-out, box-shadow 0.5s;
}

@keyframes scroll-up {100%{margin-top: 0;}}

.button-link a{
    color:#444444;
    font-size: large;
}

button:hover {
    color: orangered;
    transform: translate(-0.5em, -0.25em);
    box-shadow: 5px 5px 2px 1px #444444;
}

/* ANIMATIONS */


/* MEDIA QUERIES */
@media only screen and (min-device-width: 950px) {
    header {
        display: block;
    }
    .background {
        background-image: url(../assets/cover_Rocscience_magazine_v02.png);
    }
    .button {
       margin-top: 2em;
    }
    .buttons {
        width: 40%;
    }
    button {
        padding: 1.5em;
    }
    .button-link {
        font-size: larger;
    }
}

